# freight-operational-teammate

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  stages.txt
.playwright-mcp/: page-2026-06-15T21-41-22-449Z.yml  page-2026-06-15T22-15-43-153Z.yml  page-2026-06-15T22-15-55-909Z.yml
docs/: AGENTIC_ARCHITECTURE.md  ASCENDTMS_MAPPING.md  BUILD_SUPERVISION_PROTOCOL.md  CHANNEL_ONBOARDING.md  CLIENT_1_RUNBOOK.md  CODEX_FIX_HANDOFF.md  CODEX_HANDOFF.md  DEPLOYMENT.md  DESIGN_PARTNER_DEPLOYMENT_PACKAGE.md  DESIGN_PARTNER_PILOT.md  FIRST_DESIGN_PARTNER_RASHEED.md  INTERNAL_DOGFOOD_PILOT.md  LIVE_WRITE_PROOF.md  MODEL_STRATEGY.md  NEYMA_VISION.md  OWNER_DEMAND_CATALOG.md  OWNER_OPERATOR_READINESS.md  OWNER_OPERATOR_ROADMAP.md  PRODUCTION_HANDOFF.md  PRODUCTION_PILOT.md  PRODUCT_ROADMAP.md  SESSION_HANDOFF.md  SESSION_RUNTIME_MIGRATION.md  SUNDAY_DEMO_RUNBOOK.md  SYNTHETIC_CORPUS.md  TMS_ONBOARDING.md  WHEN_DESIGN_PARTNER_DATA_ARRIVES.md
eval/: README.md  add_to_golden_set.py  evaluator.py  extraction.py  report.py  requirements.txt  run_corpus_eval.py  run_eval.py
scripts/: apply_review_action.py  check_tool_permission.py  deliver_review.py  discover_gmail_freight.py  discover_tms_screen.py  dispatch_review.py  download_public_freight_templates.py  drive_real_tms.py  enter_invoice_discovered.py  enter_tms_payable.py  enter_truckingoffice_invoice.py  generate_daily_summary.py  generate_email_corpus.py  generate_follow_up_draft.py  generate_mock_tms.py  generate_packet_pages.py  generate_realistic_corpus.py  generate_sample_invoice.py  (+35 more)
(+383 files in other folders)
