[project]
name = "freight-recon"
version = "0.1.0"
description = "AI operational teammate for freight brokerages: carrier-invoice-to-rate-con reconciliation engine"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "instructor>=1.5",
    "anthropic>=0.39",
    "openai>=1.40",
    "pymupdf>=1.24",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "reportlab>=4.0",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
browser-agent = [
    "browser-use[core]==0.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/freight_recon"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
